--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
+certifi==2018.8.24
+chardet==3.0.4
+colorama==0.3.9
 Django==2.0.6
+django-cors-headers==2.2.0
 django-extensions==2.0.7
+django-js-asset==1.1.0
+django-mail-templated==2.6.5
+django-mptt==0.9.0
+django-pyodbc-azure==2.0.6.1
+django-qr-code==1.0.0
 djangorestframework==3.8.2
 html5lib==1.0.1
 httplib2==0.11.3
+idna==2.7
+lxml==4.2.3
 Pillow==5.1.0
+pyodbc==4.0.23
 PyPDF2==1.26.0
+pypng==0.0.18
+PyQRCode==1.2.1
 pytz==2018.4
+qrcode==6.0
 reportlab==3.4.0
+requests==2.19.1
 runscript==0.2.6
 six==1.11.0
+urllib3==1.23
 webencodings==0.5.1
 xhtml2pdf==0.2.2
