--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-amqp==2.3.2
-billiard==3.5.0.4
-celery==4.2.1
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+celery==3.1.26.post2
 certifi==2018.8.24
 chardet==3.0.4
 colorama==0.3.9
 diff-match-patch==20121119
 Django==2.0.6
+django-celery==3.2.2
 django-cors-headers==2.2.0
 django-extensions==2.0.7
 django-import-export==1.1.0
@@ -20,7 +22,7 @@ html5lib==1.0.1
 httplib2==0.11.3
 idna==2.7
 jdcal==1.4
-kombu==4.2.1
+kombu==3.0.37
 lxml==4.2.3
 num2words==0.5.7
 odfpy==1.3.6
